--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "isteven-angular-multiselect",
-    "version": "v4.0.0",
+    "name": "angular-multi-select",
+    "version": "v1.0.0",
     "description": "A multi select dropdown directive for AngularJS",
     "main": [
-        "isteven-multi-select.js",
-        "isteven-multi-select.css"
+        "angular-multi-select.js",
+        "angular-multi-select.css"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/isteven/angular-multi-select.git"
+        "url": "https://github.com/brennaveen/angular-multi-select.git"
     },
     "keywords": [
         "angular"
     ],
-    "author": "Ignatius Steven <isteven.github@gmail.com> (https://github.com/isteven)",
+    "author": "Brenna Veen <brennaveen@users.noreply.github.com> (https://github.com/brennaveen)",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/isteven/angular-multi-select/issues"
+        "url": "https://github.com/brennaveen/angular-multi-select/issues"
     },
-    "homepage": "https://github.com/isteven/angular-multi-select"
+    "homepage": "https://github.com/brennaveen/angular-multi-select"
 }
